infrastructure/infisical/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical-public
  namespace: infisical
spec:
  ingressClassName: traefik
  rules:
    - host: infisical.oscargicast.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infisical
                port:
                  number: 8080
